Fixed tag and z-index on scrollable dropdown fields

--- a/src/app/shared/form/builder/ds-dynamic-form-ui/models/scrollable-dropdown/dynamic-scrollable-dropdown.component.scss
+++ b/src/app/shared/form/builder/ds-dynamic-form-ui/models/scrollable-dropdown/dynamic-scrollable-dropdown.component.scss
@@ -22,4 +22,5 @@
 .scrollable-dropdown-menu {
   left: 0 !important;
   margin-bottom: 1rem;
+  z-index: 1001;
 }
